[package]
name = "npbtn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
rspotify = "0.13.3"
serde = { version = "1.0.189", features = ["derive"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
